--- a/code/16_Projects/odometer_simulation/Cargo.toml
+++ b/code/16_Projects/odometer_simulation/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
-name = "guessing-game"
+name = "odometer_simulation"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-rand = "0.8.4"
+rand = "0.8"
+plotters = "0.3"
