--- a/code/16_Projects/tire_pressure_monitoring_system/Cargo.toml
+++ b/code/16_Projects/tire_pressure_monitoring_system/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
-name = "example"
+name = "tire_pressure_monitoring_system"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+rand = "0.8"
